--- a/essayLib/build.gradle
+++ b/essayLib/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven' // 增加
+group='com.github.liu-cloude'
 
 android {
     compileSdkVersion 28
