删除混淆测试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,15 +18,15 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            zipAlignEnabled true
-            shrinkResources true
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
-            zipAlignEnabled true
-            shrinkResources true
-            minifyEnabled = true
+            zipAlignEnabled false
+            shrinkResources false
+            minifyEnabled = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
