--- a/essayLib/build.gradle
+++ b/essayLib/build.gradle
@@ -12,7 +12,11 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
+        }
+        debug{
+            minifyEnabled false
+            consumerProguardFiles 'proguard-rules.pro'
         }
     }
     compileOptions {
