--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,15 +18,15 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            zipAlignEnabled false
-            shrinkResources false
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
-            zipAlignEnabled false
-            shrinkResources false
-            minifyEnabled = false
+            zipAlignEnabled true
+            shrinkResources true
+            minifyEnabled = true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
