--- a/essayLib/build.gradle
+++ b/essayLib/build.gradle
@@ -11,11 +11,11 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             consumerProguardFiles 'proguard-rules.pro'
         }
         debug{
-            minifyEnabled false
+            minifyEnabled true
             consumerProguardFiles 'proguard-rules.pro'
         }
     }
