--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
-            zipAlignEnabled true
-            shrinkResources true
-            minifyEnabled = true
+            zipAlignEnabled false
+            shrinkResources false
+            minifyEnabled = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
