--- a/groupchat/build.gradle
+++ b/groupchat/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     implementation 'com.belerweb:pinyin4j:2.5.0'
 
     implementation 'com.blankj:utilcode:1.8.2'
-    implementation 'com.wang.avi:library:2.1.3'
     //加载图片
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
@@ -59,4 +58,6 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:2.6.5"
 
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+
+    implementation project(path: ':swiplib')
 }
