更改获取图片、视频操作

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xingwang.circleclouddemo">
 
+    <!--  android:networkSecurityConfig="@xml/groupchat_network_security_config"-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
