--- a/swiplib/build.gradle
+++ b/swiplib/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
