--- a/groupchat/build.gradle
+++ b/groupchat/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    implementation 'com.android.support:support-v4:28.0.0'
     //拼音转字母
     implementation 'com.belerweb:pinyin4j:2.5.0'
 
@@ -43,7 +43,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation 'com.beautydefinelibrary:beautydefinelibrary:1.2.13'
-    implementation 'com.beautyreslibrary:beautyreslibrary:1.1.6'
+    implementation 'com.beautyreslibrary:zy:1.0.3'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
