--- a/swiplib/build.gradle
+++ b/swiplib/build.gradle
@@ -41,8 +41,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.blankj:utilcode:1.8.2'
+
     implementation 'com.beautydefinelibrary:beautydefinelibrary:1.2.10'
-    implementation 'com.beautyreslibrary:beautyreslibrary:1.1.3'
+    implementation 'com.beautyreslibrary:zy:1.0.3'
     //jackson
     implementation "com.fasterxml.jackson.core:jackson-core:2.6.5"
     implementation "com.fasterxml.jackson.core:jackson-annotations:2.6.5"
@@ -51,6 +52,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.android.support:support-v4:28.0.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
