--- a/groupchat/src/main/AndroidManifest.xml
+++ b/groupchat/src/main/AndroidManifest.xml
@@ -28,37 +28,53 @@
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
-        <activity android:name=".SearchUserActivity"
-            android:theme="@style/reslib_AppTheme.Translucent" ></activity>
+        <!--群管理-->
+        <activity android:name=".AdminGroupActivity"
+            android:theme="@style/reslib_AppTheme.Translucent"></activity>
+        <!--添加新成员-->
+        <activity
+            android:name=".SearchUserActivity"
+            android:theme="@style/reslib_AppTheme.Translucent" />
+        <!---->
         <activity
             android:name=".BuildGroupActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--管理员/群转让/屏蔽-->
         <activity
             android:name=".TransferActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--群简介-->
         <activity
             android:name=".GroupIntroActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--群名称-->
         <activity
             android:name=".EditGroupNameActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--群聊天成员-->
         <activity
             android:name=".GroupMemberActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--群设置-->
         <activity
             android:name=".GroupSettingActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--编辑群资料-->
         <activity
             android:name=".CreateGroupActivity"
             android:theme="@style/reslib_AppTheme.Translucent" />
+        <!--群列表-->
         <activity
             android:name=".GroupListActivity"
             android:theme="@style/reslib_AppTheme.Translucent">
-         <!--   <intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
     </application>
 
